--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -88,6 +88,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# use package pandas to read the data\n",
     "tweets_DM_df = pd.read_json(\"tweets_DM.json\", lines=True)\n",
     "emotion_df = pd.read_csv(\"emotion.csv\")\n",
     "data_identification_df = pd.read_csv(\"data_identification.csv\")"
@@ -269,7 +270,7 @@
     }
    ],
    "source": [
-    "tweets_DM_df"
+    "tweets_DM_df # show tweets data"
    ]
   },
   {
@@ -386,7 +387,7 @@
     }
    ],
    "source": [
-    "emotion_df"
+    "emotion_df # show emotion data"
    ]
   },
   {
@@ -503,7 +504,7 @@
     }
    ],
    "source": [
-    "data_identification_df"
+    "data_identification_df # show identification data"
    ]
   },
   {
@@ -512,6 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract hashtags, tweet_id and text from the tweets information.\n",
     "hashtags = []\n",
     "id = []\n",
     "text = []\n",
@@ -530,6 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Throw some unnecessary information\n",
     "tweets_DM_df.drop(columns='_index', inplace=True)\n",
     "tweets_DM_df.drop(columns='_source', inplace=True)\n",
     "tweets_DM_df.drop(columns='_crawldate', inplace=True)\n",
@@ -687,7 +690,7 @@
     }
    ],
    "source": [
-    "tweets_DM_df"
+    "tweets_DM_df # show the result"
    ]
   },
   {
@@ -696,6 +699,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Now, we need to know what is training data and what is testing data.\n",
     "test_df=data_identification_df[data_identification_df['identification'] == 'test']\n",
     "train_df=data_identification_df[data_identification_df['identification'] == 'train']\n",
     "train_data_df = tweets_DM_df[tweets_DM_df.tweet_id.isin(train_df.tweet_id)].reset_index(drop=True)\n",
@@ -708,6 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Then, in training data we need to give the emotion labels.\n",
     "train_data_df = train_data_df.sort_values(by=['tweet_id']).reset_index(drop=True)\n",
     "emotion_df = emotion_df.sort_values(by=['tweet_id']).reset_index(drop=True)"
    ]
@@ -884,7 +889,7 @@
     }
    ],
    "source": [
-    "train_data_df"
+    "train_data_df # show the training data informaiton."
    ]
   },
   {
@@ -1038,7 +1043,7 @@
     }
    ],
    "source": [
-    "test_data_df"
+    "test_data_df # this is the testing data information."
    ]
   },
   {
@@ -1074,7 +1079,7 @@
     }
    ],
    "source": [
-    "train_data_df.groupby(['emotion']).count()['text']"
+    "train_data_df.groupby(['emotion']).count()['text']  # to see the number in each sentiment."
    ]
   },
   {
@@ -1082,6 +1087,13 @@
    "metadata": {},
    "source": [
     "##### Undersampling (All class size are same as anger)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To process data make it balanced. In the part, I use undersampling technique."
    ]
   },
   {
@@ -1168,6 +1180,20 @@
    "metadata": {},
    "source": [
     "##### Text tokenize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because we want to know the tweets message present what emotion it is, the most representative emotions are the words. We need to tokenize the word from text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use package CountVectorizer to process text, then I can get the vector information."
    ]
   },
   {
